Prepare CI for gitlab. Test